# ser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-THIRD-PARTY  Makefile  Pipfile  README.md  SECURITY.md  boundary_policy.toml  model.pkl  pyproject.toml  repo2file.md  requirements.txt  ser.py  setup.py  sre.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  darwin-x86_64-validation.yml  dependency-review.yml  full-dataset-quality-gate-regression.yml  linux-python-3_13-cli-validation.yml  linux-selfhosted-gpu-validation.yml  macos15-mps-validation.yml  python-publish-testpypi.yml  python-publish.yml  run-tests.yml  scorecard.yml
.local/: issues.md  public-api-surface-improvements.md  resolve-open-risks.md
docs/: api-stability.md  architecture-diagram.md  architecture-refactor-roadmap.md  architecture.md  codebase-architecture.md  compatibility-matrix.md  dataset-recipes.md  refactor-hotspot-checks.md  release-and-rollback.md  subsystem-dependency-map.md  training-readiness.md
docs/adr/: README.md
docs/ci/: dependabot-alert-triage.md  hardware-validation.md  live-required-ci-docs-check.md  required-ci-docs-only-observation.md
scripts/: build_synthetic_ravdess_dataset.py  check_public_internal_imports.py  check_type_completeness.py  ci_classify_changes.sh  configure_validation_dataset_consents.sh  dump_public_api.py  install_git_hooks.sh  run_full_dataset_quality_gate.sh  run_import_lint.sh  run_prepush_gate.sh  run_structural_contract_gates.sh  setup_compatible_env.sh
scripts/workflows/: check_torch_runtime.py  configure_runtime_dirs.sh  ensure_ffmpeg.sh  run_profile_smoke.sh  setup_validation_environment.sh  smoke_test_wheel_install.sh  sync_validation_dependencies.sh  verify_ci_release.py
ser/: .gitignore  __init__.py  __main__.py  api.py  config.py  configure  domain.py  license_check.py  profile_defs.yaml  profiles.py  ser.py
ser/_internal/: __init__.py
ser/data/: __init__.py  application.py  archive_extraction.py  cli.py  data_loader.py  dataset_capabilities.py  dataset_consents.py  dataset_prepare.py  dataset_registry.py  embedding_cache.py  jl_corpus_downloads.py  label_ontology.py  manifest.py  manifest_jsonl.py  mendeley_dataset_preparation.py  mendeley_downloads.py  msp_podcast_mirror.py  ontology.py  openslr_dataset_preparation.py  openslr_downloads.py  openslr_resolution.py  provider_dataset_preparation.py  provider_downloads.py  public_dataset_downloads.py  public_dataset_label_inference.py  zenodo_downloads.py
ser/diagnostics/: __init__.py  command.py  domain.py  service.py
ser/features/: __init__.py  feature_extractor.py
ser/heads/: __init__.py  torch_head.py
ser/models/: __init__.py  accurate_feature_dataset.py  accurate_training_execution.py  accurate_training_preparation.py  artifact_envelope.py  artifact_loading.py  artifact_metadata.py  artifact_persistence.py  dataset_controls.py  dataset_splitting.py  dataset_training_consents.py  emotion_model.py  fast_path.py  fast_training.py  feature_runtime_encoding.py  medium_noise_controls.py  medium_training_preparation.py  profile_runtime.py  profile_training_preparation.py  ser_model.pkl  training_entrypoints.py  training_orchestration.py
ser/pool/: __init__.py  stats_pool.py  windowing.py
ser/repr/: __init__.py  backend.py  emotion2vec.py  handcrafted.py  hf_whisper.py  hf_xlsr.py  runtime_policy.py
ser/runtime/: __init__.py  accurate_backend_runtime.py  accurate_execution_flow.py  accurate_inference.py  accurate_model_contract.py  accurate_operation_setup.py  accurate_prediction.py  accurate_process_timeout.py  accurate_research_inference.py  accurate_retry_operation.py  accurate_runtime_support.py  accurate_worker_lifecycle.py  accurate_worker_operation.py  backend_hooks.py  benchmarks.py  contracts.py  fast_inference.py  medium_backend_runtime.py  medium_execution.py  medium_execution_context.py  medium_execution_flow.py  medium_inference.py  medium_prediction.py  medium_process_operation.py  medium_process_timeout.py  medium_retry_policy.py  medium_runtime_support.py  medium_worker_lifecycle.py  medium_worker_operation.py  mps_oom.py  phase_contract.py  phase_timing.py  pipeline.py  policy.py  postprocessing.py  profile_quality_gate.py  quality_gate_cli.py  quality_gate_evaluation.py  quality_gate_policy.py  quality_gate_reporting.py  (+2 more)
ser/tests/: test_suite.py
ser/train/: __init__.py  eval.py  metrics.py
ser/transcript/: __init__.py  mps_admission.py  mps_admission_overrides.py  profiling.py  runtime_failures.py  runtime_policy.py  transcript_extractor.py
ser/utils/: __init__.py  audio_utils.py  common_utils.py  dsp.py  logger.py  segment_canonicalization.py  subtitles.py  timeline_utils.py  torch_inference.py  transcription_compat.py
tests/: __init__.py  conftest.py  test_accurate_execution.py  test_accurate_execution_flow.py  test_accurate_feature_dataset.py  test_accurate_inference.py  test_accurate_operation_setup.py  test_accurate_process_timeout.py  test_accurate_research_inference.py  test_accurate_retry_operation.py  test_accurate_runtime_support.py  test_accurate_training_artifact.py  test_accurate_training_preparation.py  test_accurate_worker_lifecycle.py  test_accurate_worker_operation.py  test_ambient_settings_contract.py  test_api.py  test_api_import_boundary.py  test_architecture_docs.py  test_artifact_loading.py  test_artifact_persistence.py  test_artifact_upgrade_path.py  test_audio_utils.py  test_backend_contract.py  test_backend_hooks.py  test_cli.py  test_config.py  test_config_feature_flags.py  test_config_public_contract.py  test_data_application.py  test_data_cli.py  test_data_loader.py  test_dataset_adapters_biic_podcast.py  test_dataset_adapters_crema_d.py  test_dataset_adapters_msp_podcast.py  test_dataset_adapters_public_csv_datasets.py  test_dataset_adapters_ravdess.py  test_dataset_consents.py  test_dataset_controls.py  test_dataset_prepare.py  (+86 more)
tests/fixtures/: __init__.py  public_internal_allowlist.txt  settings.py
tests/utils/: __init__.py
(+398 files in other folders)
