[project]
name = "ser"
version = "1.0.0"
description = "A Speech Emotion Recognition tool"
authors = [{ name = "Juan Sugg", email = "juanpedrosugg@gmail.com" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["speech", "emotion", "recognition"]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "stable-ts>=2.19.1,<3.0.0; python_version < '3.13' or (sys_platform != 'darwin' or platform_machine != 'x86_64')",
  "colored>=2.2.4,<3.0.0",
  "librosa>=0.10.2.post1,<0.11.0",
  "numba>=0.62,<0.63; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "numba>=0.63,<0.64; python_version >= '3.13' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
  "numba>=0.62,<0.64; python_version < '3.13' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
  "numpy>=1.26.2,<2.0.0; python_version < '3.13'",
  "numpy>=2.0.0,<3.0.0; python_version >= '3.13'",
  "openai-whisper>=20250625,<20260000; python_version < '3.13' or (sys_platform != 'darwin' or platform_machine != 'x86_64')",
  "ffmpeg-python>=0.2.0,<0.3.0",
  "scikit-learn>=1.3.2,<1.8.0",
  "soundfile>=0.12.1,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "PyYAML>=6.0,<7.0",
  "tqdm>=4.66.1,<5.0.0",
  "demucs>=4.0.1,<5.0.0; python_version < '3.13' or (sys_platform != 'darwin' or platform_machine != 'x86_64')",
  "torch>=2.2,<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version < '3.13'",
  "torch>=2.6,<3.0.0; python_version >= '3.13' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
  "torch>=2.2,<3.0.0; python_version < '3.13' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
  "psutil>=5.9.8,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.0,<5.0.0",
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.9.0,<1.0.0",
  "black>=24.10.0,<26.0.0",
  "isort>=5.13.0,<7.0.0",
  "mypy>=1.11.0,<2.0.0",
  "pyright>=1.1.390,<2.0.0",
]
medium = [
  "transformers>=4.49.0,<5.0.0; python_version < '3.13' or (sys_platform != 'darwin' or platform_machine != 'x86_64')",
]
full = [
  "transformers>=4.49.0,<5.0.0; python_version < '3.13' or (sys_platform != 'darwin' or platform_machine != 'x86_64')",
  "funasr>=1.3.1,<2.0.0",
  "modelscope>=1.34.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/jsugg/ser"
Repository = "https://github.com/jsugg/ser/"
Issues = "https://github.com/jsugg/ser/issues"

[project.scripts]
ser = "ser.__main__:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/ser",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/ser/.gitignore",
  "/ser/configure",
  "/ser/dataset/**",
  "/ser/models/OpenAI/**",
  "/ser/models/*.pkl",
]

[tool.hatch.build.targets.wheel]
packages = ["ser"]
include = ["ser/profile_defs.yaml"]
exclude = [
  "ser/.gitignore",
  "ser/configure",
  "ser/dataset/**",
  "ser/models/OpenAI/**",
  "ser/models/*.pkl",
]

[tool.black]
line-length = 88
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
py_version = 312
skip_gitignore = true
src_paths = ["ser"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["^dist/", "^build/", "^\\.venv/"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["ser", "tests"]
exclude = ["**/__pycache__", "dist", "build", ".venv"]
reportMissingImports = "warning"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"
